recursion.cons.lessons.recursion.cons.AllDifferent.scala.error
allDifferent:4: error: not found: value occurence
  } else if (occurence(l,l.head)=!1) {
             ^