recursion.cons.lessons.recursion.cons.AllDifferent.scala.code
def allDifferent(l:List[Int]): Boolean = {
  if (l==Nil) {
    return true
  } else if (occurence(l,l.head)=!1) {
    return false
  } else allDifferent(l.tail)
}